2012-10-04  Tab Atkins  <jackalmage@gmail.com>

        Selector specificity categories "overflow" into higher categories
        https://bugs.webkit.org/show_bug.cgi?id=98295

        Reviewed by Eric Seidel.

        This patch adds per-component overflow guards for CSS selector specificity.
        Previously, we didn't guard against overflow. 
        Since we stored each component as a byte mapped into a single unsigned int for the whole specificity,
        256 of a particular simple selector was equivalent to 1 of the next-higher-group selector.
        This violated the Selectors specification,
        which requires the components to be compared lexicographically.

        Tests: /fast/selectors/specificity-overflow.html

        * css/CSSSelector.cpp:
        (WebCore::CSSSelector::specificity):

2012-10-04  Enrica Casucci  <enrica@apple.com>

        Font::glyphDataAndPageForCharacter doesn't account for text orientation when using systemFallback on a cold cache.
        https://bugs.webkit.org/show_bug.cgi?id=98452.

        Reviewed by Dan Bernstein.

        The text orientation was considered only when there is a cache hit.
        This change moves the logic to handle text orientation to a separate
        inline function that is called also when the glyph is added to the cache.

        Test: fast/text/vertical-rl-rtl-linebreak.html

        * platform/graphics/FontFastPath.cpp:
        (WebCore::applyTextOrientationForCharacter): Added.
        (WebCore::Font::glyphDataAndPageForCharacter): Modified to use the new function in
        both cases of cold and warm cache.

2012-10-04  Adam Klein  <adamk@chromium.org>

        MutationRecord attributeName should be null for non attribute changes
        https://bugs.webkit.org/show_bug.cgi?id=98438

        Reviewed by Ojan Vafai.

        Test: fast/mutation/mutation-record-nullity.html

        * dom/MutationRecord.idl:

2012-10-04  Simon Fraser  <simon.fraser@apple.com>
